feat: Complete Admin Dashboard & Subscription Business Logic - Auto 30-day demo trial on registration with 0% commission - Demo expiration auto-updates to expired status with grace period - 15% commission for subscribed garages - Create User modal with type selection - Fixed Users section filters and pagination - Modern UI animations and glassmorphism effects - Fixed service worker fetch handler

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -67,6 +67,11 @@
                     <i class="bi bi-journal-text"></i>
                     <span>Audit Log</span>
                 </button>
+                <div class="nav-divider"></div>
+                <button class="nav-item create-user-btn" onclick="openCreateUserModal()">
+                    <i class="bi bi-person-plus-fill"></i>
+                    <span>Create User</span>
+                </button>
             </nav>
             <div class="sidebar-footer">
                 <button class="btn btn-outline" onclick="logout()">
@@ -187,9 +192,41 @@
             <section class="section" id="sectionUsers">
                 <div class="page-header">
                     <h1 class="page-title"><i class="bi bi-people"></i> User Management</h1>
-                    <p>View and manage platform users</p>
+                    <div class="header-actions">
+                        <select id="userTypeFilter" onchange="loadUsers()">
+                            <option value="all">All Types</option>
+                            <option value="customer">Customers</option>
+                            <option value="garage">Garages</option>
+                            <option value="driver">Drivers</option>
+                        </select>
+                        <select id="userStatusFilter" onchange="loadUsers()">
+                            <option value="all">All Status</option>
+                            <option value="active">Active</option>
+                            <option value="suspended">Suspended</option>
+                        </select>
+                        <input type="text" id="userSearch" placeholder="Search users..." onkeyup="debounceUserSearch()">
+                    </div>
                 </div>
-                <div id="usersList"></div>
+                <div class="data-table-wrapper">
+                    <table class="data-table" id="usersTable">
+                        <thead>
+                            <tr>
+                                <th>User</th>
+                                <th>Type</th>
+                                <th>Contact</th>
+                                <th>Status</th>
+                                <th>Registered</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="usersTableBody">
+                            <tr>
+                                <td colspan="6" class="empty-cell">Loading users...</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div id="usersPagination" class="pagination-container"></div>
             </section>
 
             <!-- Audit Log Section -->
@@ -273,6 +310,313 @@
                 <button class="btn btn-primary" onclick="confirmDemo()">
                     <i class="bi bi-clock"></i> Grant Demo
                 </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- User Detail Modal -->
+    <div class="modal-overlay" id="userDetailModal">
+        <div class="modal modal-lg">
+            <div class="modal-header">
+                <h3><i class="bi bi-person"></i> User Details</h3>
+                <button class="modal-close" onclick="closeModal('userDetailModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="user-detail-grid" id="userDetailContent">
+                    <div class="loading-spinner">Loading...</div>
+                </div>
+            </div>
+            <div class="modal-actions" id="userDetailActions">
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit User Modal -->
+    <div class="modal-overlay" id="editUserModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3><i class="bi bi-pencil"></i> Edit User</h3>
+                <button class="modal-close" onclick="closeModal('editUserModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" id="editUserId">
+                <div class="form-group">
+                    <label>Full Name</label>
+                    <input type="text" id="editUserName" placeholder="Full name">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" id="editUserEmail" placeholder="Email address">
+                </div>
+                <div class="form-group">
+                    <label>Phone</label>
+                    <input type="tel" id="editUserPhone" placeholder="Phone number">
+                </div>
+            </div>
+            <div class="modal-actions">
+                <button class="btn btn-outline" onclick="closeModal('editUserModal')">Cancel</button>
+                <button class="btn btn-primary" onclick="confirmEditUser()">
+                    <i class="bi bi-check"></i> Save Changes
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Reset Password Modal -->
+    <div class="modal-overlay" id="resetPasswordModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3><i class="bi bi-key"></i> Reset Password</h3>
+                <button class="modal-close" onclick="closeModal('resetPasswordModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" id="resetPasswordUserId">
+                <p>Reset password for <strong id="resetPasswordUserName"></strong></p>
+                <div class="form-group">
+                    <label>New Password</label>
+                    <input type="password" id="newPassword" placeholder="Enter new password">
+                </div>
+                <div class="form-group">
+                    <label>Confirm Password</label>
+                    <input type="password" id="confirmNewPassword" placeholder="Confirm new password">
+                </div>
+            </div>
+            <div class="modal-actions">
+                <button class="btn btn-outline" onclick="closeModal('resetPasswordModal')">Cancel</button>
+                <button class="btn btn-warning" onclick="confirmResetPassword()">
+                    <i class="bi bi-key"></i> Reset Password
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Garage Detail Modal -->
+    <div class="modal-overlay" id="garageDetailModal">
+        <div class="modal modal-lg">
+            <div class="modal-header">
+                <h3><i class="bi bi-shop"></i> Garage Details</h3>
+                <button class="modal-close" onclick="closeModal('garageDetailModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div id="garageDetailContent">
+                    <div class="loading-spinner">Loading...</div>
+                </div>
+            </div>
+            <div class="modal-actions" id="garageDetailActions">
+            </div>
+        </div>
+    </div>
+
+    <!-- Assign Subscription Modal -->
+    <div class="modal-overlay" id="subscriptionModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3><i class="bi bi-credit-card"></i> Manage Subscription</h3>
+                <button class="modal-close" onclick="closeModal('subscriptionModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" id="subscriptionGarageId">
+                <p>Manage subscription for <strong id="subscriptionGarageName"></strong></p>
+                <div class="form-group">
+                    <label>Select Plan</label>
+                    <select id="subscriptionPlan">
+                        <option value="">Loading plans...</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Duration (Days)</label>
+                    <input type="number" id="subscriptionDays" value="30" min="1" max="365">
+                </div>
+                <div class="form-group">
+                    <label>Commission Override (%)</label>
+                    <input type="number" id="commissionOverride" placeholder="Leave empty for default" step="0.1"
+                        min="0" max="100">
+                </div>
+                <div class="form-group">
+                    <label>Notes</label>
+                    <textarea id="subscriptionNotes" placeholder="Add any notes..."></textarea>
+                </div>
+            </div>
+            <div class="modal-actions">
+                <button class="btn btn-outline" onclick="closeModal('subscriptionModal')">Cancel</button>
+                <button class="btn btn-danger" onclick="revokeSubscription()" id="btnRevokeSubscription"
+                    style="display:none">
+                    <i class="bi bi-x-circle"></i> Revoke
+                </button>
+                <button class="btn btn-primary" onclick="confirmAssignSubscription()">
+                    <i class="bi bi-check-circle"></i> Assign Plan
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Extend Subscription Modal -->
+    <div class="modal-overlay" id="extendSubscriptionModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3><i class="bi bi-calendar-plus"></i> Extend Subscription</h3>
+                <button class="modal-close" onclick="closeModal('extendSubscriptionModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" id="extendGarageId">
+                <p>Extend subscription for <strong id="extendGarageName"></strong></p>
+                <div class="form-group">
+                    <label>Additional Days</label>
+                    <input type="number" id="extendDays" value="30" min="1" max="365">
+                </div>
+                <div class="form-group">
+                    <label>Reason</label>
+                    <textarea id="extendReason" placeholder="Reason for extension..."></textarea>
+                </div>
+            </div>
+            <div class="modal-actions">
+                <button class="btn btn-outline" onclick="closeModal('extendSubscriptionModal')">Cancel</button>
+                <button class="btn btn-success" onclick="confirmExtendSubscription()">
+                    <i class="bi bi-calendar-plus"></i> Extend
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Create User Modal -->
+    <div class="modal-overlay" id="createUserModal">
+        <div class="modal modal-lg">
+            <div class="modal-header" style="background: linear-gradient(135deg, #10b981, #059669);">
+                <h3><i class="bi bi-person-plus-fill"></i> Create New User</h3>
+                <button class="modal-close" onclick="closeModal('createUserModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <!-- Step 1: Select User Type -->
+                <div id="createUserStep1">
+                    <h4 style="margin-bottom: 16px; color: var(--text-primary);">Select User Type</h4>
+                    <div class="user-type-grid">
+                        <div class="user-type-card" onclick="selectUserType('customer')">
+                            <i class="bi bi-person"></i>
+                            <span>Customer</span>
+                            <small>End user who requests parts</small>
+                        </div>
+                        <div class="user-type-card" onclick="selectUserType('garage')">
+                            <i class="bi bi-shop"></i>
+                            <span>Garage</span>
+                            <small>Spare parts supplier</small>
+                        </div>
+                        <div class="user-type-card" onclick="selectUserType('driver')">
+                            <i class="bi bi-truck"></i>
+                            <span>Driver</span>
+                            <small>Delivery personnel</small>
+                        </div>
+                        <div class="user-type-card" onclick="selectUserType('operations')">
+                            <i class="bi bi-headset"></i>
+                            <span>Operations</span>
+                            <small>Customer service staff</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Step 2: User Details Form -->
+                <div id="createUserStep2" style="display: none;">
+                    <div class="step-indicator">
+                        <button class="btn btn-sm btn-outline" onclick="backToTypeSelection()">
+                            <i class="bi bi-arrow-left"></i> Back
+                        </button>
+                        <span class="selected-type-badge" id="selectedTypeBadge"></span>
+                    </div>
+
+                    <form id="createUserForm">
+                        <!-- Common Fields -->
+                        <div class="form-section">
+                            <h4>Account Information</h4>
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label>Phone Number *</label>
+                                    <input type="tel" id="newUserPhone" placeholder="+974 XXXX XXXX" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>Password *</label>
+                                    <input type="password" id="newUserPassword" placeholder="Min 6 characters" required>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label>Full Name *</label>
+                                    <input type="text" id="newUserName" placeholder="Full name" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>Email</label>
+                                    <input type="email" id="newUserEmail" placeholder="email@example.com">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Garage-specific Fields -->
+                        <div class="form-section garage-fields" style="display: none;">
+                            <h4>Garage Information</h4>
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label>Garage Name *</label>
+                                    <input type="text" id="newGarageName" placeholder="Business name">
+                                </div>
+                                <div class="form-group">
+                                    <label>Trade License Number</label>
+                                    <input type="text" id="newGarageLicense" placeholder="License number">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label>Address</label>
+                                <textarea id="newGarageAddress" placeholder="Full business address"></textarea>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label>CR Number</label>
+                                    <input type="text" id="newGarageCR" placeholder="Commercial Registration">
+                                </div>
+                                <div class="form-group">
+                                    <label>Approval Status</label>
+                                    <select id="newGarageStatus">
+                                        <option value="pending">Pending</option>
+                                        <option value="approved">Approved</option>
+                                        <option value="demo">Demo (30 days)</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Driver-specific Fields -->
+                        <div class="form-section driver-fields" style="display: none;">
+                            <h4>Driver Information</h4>
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label>Vehicle Type</label>
+                                    <select id="newDriverVehicle">
+                                        <option value="motorcycle">Motorcycle</option>
+                                        <option value="car">Car</option>
+                                        <option value="van">Van</option>
+                                        <option value="truck">Truck</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label>License Plate</label>
+                                    <input type="text" id="newDriverPlate" placeholder="Vehicle plate number">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Options -->
+                        <div class="form-section">
+                            <div class="form-check">
+                                <input type="checkbox" id="newUserActive" checked>
+                                <label for="newUserActive">Account is active</label>
+                            </div>
+                            <div class="form-check">
+                                <input type="checkbox" id="sendWelcomeSms">
+                                <label for="sendWelcomeSms">Send welcome SMS with credentials</label>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-actions" id="createUserActions">
+                <button class="btn btn-outline" onclick="closeModal('createUserModal')">Cancel</button>
             </div>
         </div>
     </div>
