--- a/public/driver-app/index.html
+++ b/public/driver-app/index.html
@@ -22,6 +22,8 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/bootstrap-icons/bootstrap-icons.css">
+    <!-- Leaflet.js for Maps -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="">
     <!-- Shared CSS -->
     <link rel="stylesheet" href="/css/shared.css">
     <link rel="stylesheet" href="/driver-app/css/driver.css">
@@ -343,6 +345,8 @@
 
     <!-- JavaScript -->
     <script src="/socket.io/socket.io.js"></script>
+    <!-- Leaflet.js for Maps -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
     <!-- Shared JS utilities -->
     <script src="/js/shared/utils.js"></script>
     <script src="/js/shared/toast.js"></script>
