--- a/public/privacy.html
+++ b/public/privacy.html
@@ -74,10 +74,11 @@
     <div class="container">
         <span class="logo">🔧 QScrap</span>
         <h1>Privacy Policy</h1>
-        <p class="date">Last updated: December 24, 2024</p>
+        <p class="date">Last updated: December 26, 2024</p>
 
         <h2>1. Introduction</h2>
-        <p>QScrap ("we", "our", or "us") operates the QScrap mobile application. This Privacy Policy explains how we
+        <p>QScrap Services L.L.C ("we", "our", or "us") operates the QScrap mobile application. This Privacy Policy
+            explains how we
             collect, use, disclose, and safeguard your information when you use our app.</p>
 
         <h2>2. Information We Collect</h2>
