docs: Add official Arabic company name to legal pages
Company Name (Official):
- English: QScrap Services L.L.C
- Arabic: كيو سكراب للخدمات ذ.م.م

Registered with Qatar Ministry of Commerce

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -77,7 +77,8 @@
         <p class="date">Last updated: December 26, 2024</p>
 
         <h2>1. Introduction</h2>
-        <p>QScrap Services L.L.C ("we", "our", or "us") operates the QScrap mobile application. This Privacy Policy
+        <p>QScrap Services L.L.C / كيو سكراب للخدمات ذ.م.م ("we", "our", or "us") operates the QScrap mobile
+            application. This Privacy Policy
             explains how we
             collect, use, disclose, and safeguard your information when you use our app.</p>
 
