--- a/public/terms.html
+++ b/public/terms.html
@@ -81,7 +81,8 @@
             any part of these terms, you may not use our services.</p>
 
         <h2>2. Description of Service</h2>
-        <p>QScrap is a marketplace connecting customers seeking automotive spare parts with local garages and scrap
+        <p>QScrap Services L.L.C / كيو سكراب للخدمات ذ.م.م is a marketplace connecting customers seeking automotive
+            spare parts with local garages and scrap
             yards in Qatar. We facilitate:</p>
         <ul>
             <li>Part requests and bidding from multiple garages</li>
